encore database.ini

--- a/src/database.ini
+++ b/src/database.ini
@@ -1,4 +1,4 @@
-host = "op36nr.ftp.infomaniak.com"
+host = "op36nr.myd.infomaniak.com"
 port = 3306
 dbname = "op36nr_wavemusic"
 username = "op36nr_SCC"
