--- a/src/config/database.ini
+++ b/src/config/database.ini
@@ -1,6 +1,6 @@
 [database]
-host = "op36nr.myd.infomaniak.com"
+host = localhost
 port = 3306
-dbname = "op36nr_wavemusic"
-username = "op36nr_SCC"
-password = "_!Steve9_Carla9_Cindy9!_"
+dbname = op36nr_wavemusic
+username = root
+password = rootx
