--- a/src/config/mail.ini
+++ b/src/config/mail.ini
@@ -1,7 +1,7 @@
-host = "localhost"
-port = 1025
-authentication = false
-username = ""
-password = ""
-from_email = "no-reply@mailpit.localhost"
-from_name = "Mailpit Local SMTP"
+host = "mail.infomaniak.com"
+port = 465
+authentication = true
+username = "info@waveemusic.ch"
+password = "9I!0$_7l1UciYp"
+from_email = "info@waveemusic.ch"
+from_name = "Wave Music"
