--- a/src/config/mail.ini
+++ b/src/config/mail.ini
@@ -3,5 +3,5 @@ port = 465
 authentication = true
 username = "info@waveemusic.ch"
 password = "9I!0$_7l1UciYp"
-from_email = "info@waveemusic.ch"
+from_email = "no-reply@waveemusic.ch"
 from_name = "Wave Music"
